Fixes for header adaptibe on small devices

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -338,11 +338,7 @@ section header {
 	}
 
 	@include respond-to(tablets){
-		height: (650px - 97px);
-	}
-
-	@include respond-to(largephone){
-		height: (800px - 97px );
+		height: auto;
 	}
 }
 
@@ -358,17 +354,12 @@ section header {
 		max-height: none;
 	}
 
-	@include respond-to(tablets){
-		 height: 650px;
-	}
-
-	@include respond-to(largephone){
-		height: 800px;
+	@include respond-to(tablets) {
+		height: auto;
 	}
 }
 
 .info-holder {
-	height: 78px;
 	position: absolute;
 	right: 25px;
 	z-index: 2;
@@ -378,10 +369,19 @@ section header {
 	flex-wrap: nowrap;
 	padding-top: 10px;
 	color: $menutext;
+	margin-bottom: 40px;
 
 	@include respond-to(tablets){
+		position: relative;
+		left: 20px;
+	}
+
+	@include respond-to(largephone){
 		width: 295px;
 		flex-wrap: wrap;
+		right: 0;
+		left: 0;
+		margin: 30px auto 40px;
 	}
 
 	.icons {
@@ -396,6 +396,10 @@ section header {
 		margin-right: 25px;
 		padding: 0 15px;
 
+		@include respond-to(tablets){
+			margin-right: 0;
+			padding: 0 0 0 15px;
+		}
 
 
 		span {
@@ -416,7 +420,7 @@ section header {
 }
 
 .info.item2, .icons.phone{
-	@include respond-to(tablets){
+	@include respond-to(largephone){
 		margin-top: 20px;
 	}
 }
@@ -436,6 +440,12 @@ section header {
 	color: $menutext;
 	padding: 0 20px;
 	box-sizing: border-box;
+
+	@include respond-to(tablets){
+		position: relative;
+		bottom: auto;
+		margin-bottom: 30px;
+	}
 
 	h1 {
 		font-size: 2.2rem;
